--- a/src/app/Components/middle-main/middle-main.component.css
+++ b/src/app/Components/middle-main/middle-main.component.css
@@ -3,6 +3,7 @@
     margin: 0px;
     padding: 0px;
     font-family: Roboto,system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background-color: #0f0f0f;
 }
 
 /* Navbar */
