--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div>
-  <app-navbar [profile]="profile"></app-navbar>
+  <app-navbar class="navbar" [profile]="profile"></app-navbar>
   <div class="middle">
     <app-left-side-main [leftItems]="leftItems"></app-left-side-main>
     <div class="right_section_body">
