--- a/src/app/Routes/subscribed/subscribed.component.css
+++ b/src/app/Routes/subscribed/subscribed.component.css
@@ -1,6 +1,8 @@
 .middle{
     display: flex;
     flex-wrap: wrap;
+    color: white;
+    background-color: #0f0f0f;
 }
 .bottom-right{
     position: relative;
