--- a/src/styles.css
+++ b/src/styles.css
@@ -357,3 +357,6 @@ input::-webkit-input-placeholder{
 
 
 
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
