--- a/src/app/Routes/home/home.component.html
+++ b/src/app/Routes/home/home.component.html
@@ -1,3 +1,4 @@
+<!-- Render all the videos present -->
 <div class="bottom-right">
     <app-middle-main [videoData]="videoData" class="middle"></app-middle-main>
 </div>
