--- a/src/app/Routes/subscribed/subscribed.component.html
+++ b/src/app/Routes/subscribed/subscribed.component.html
@@ -1,3 +1,4 @@
+<!-- render the product where subscribed is true -->
 <div class="bottom-right">
 <app-middle-main [videoData]="videoData" class="middle"></app-middle-main>
 </div>
